Add additional routes
